--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ html,
 body,
 #root {
   font: 0.9rem sans-serif;
-  background: #0a1f44;
+  background: #fff;
   color: #1e2432;
   height: 100%;
   margin: 0;
@@ -36,16 +36,19 @@ h1 {
   align-items: center;
   justify-content: center;
   width: auto;
-  height: 25%;
 }
 
 .search {
   outline: none;
-  padding: 10px 7%;
-  border-radius: 20px;
+  /* padding: 10px 7%; */
+  border-radius: 5px;
   border: none;
   margin-bottom: 5%;
   background: rgba(250, 250, 250, 0.85);
+  width: 150px;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-content {
